--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -9,10 +9,12 @@
       <%= l message.created_at%>
     </div>
   </div>
+  
   <div class="lower-message">
     <div class="message-content">
     <!-- 投稿したメッセージ内容を記述する -->
     <%= message.content%>
     </div>
+    <%= image_tag message.image, class: 'message-image' if message.image.attached? %>
   </div>
 </div>
